# serializer version: 1
# name: test_all_entities[bosch_radiator_thermostat_ii][update.radiator_thermostat_ii_m_wohnzimmer_firmware-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'update',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'update.radiator_thermostat_ii_m_wohnzimmer_firmware',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <UpdateDeviceClass.FIRMWARE: 'firmware'>,
    'original_icon': None,
    'original_name': 'Firmware',
    'platform': 'smartthings',
    'previous_unique_id': None,
    'supported_features': <UpdateEntityFeature: 5>,
    'translation_key': None,
    'unique_id': '286ba274-4093-4bcb-849c-a1a3efe7b1e5_main',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[bosch_radiator_thermostat_ii][update.radiator_thermostat_ii_m_wohnzimmer_firmware-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'auto_update': False,
      'device_class': 'firmware',
      'display_precision': 0,
      'entity_picture': 'https://brands.home-assistant.io/_/smartthings/icon.png',
      'friendly_name': 'Radiator Thermostat II [+M] Wohnzimmer Firmware',
      'in_progress': False,
      'installed_version': '2.00.09 (20009)',
      'latest_version': '2.00.09 (20009)',
      'release_summary': None,
      'release_url': None,
      'skipped_version': None,
      'supported_features': <UpdateEntityFeature: 5>,
      'title': None,
      'update_percentage': None,
    }),
    'context': <ANY>,
    'entity_id': 'update.radiator_thermostat_ii_m_wohnzimmer_firmware',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[centralite][update.dimmer_debian_firmware-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'update',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'update.dimmer_debian_firmware',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <UpdateDeviceClass.FIRMWARE: 'firmware'>,
    'original_icon': None,
    'original_name': 'Firmware',
    'platform': 'smartthings',
    'previous_unique_id': None,
    'supported_features': <UpdateEntityFeature: 5>,
    'translation_key': None,
    'unique_id': 'd0268a69-abfb-4c92-a646-61cec2e510ad_main',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[centralite][update.dimmer_debian_firmware-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'auto_update': False,
      'device_class': 'firmware',
      'display_precision': 0,
      'entity_picture': 'https://brands.home-assistant.io/_/smartthings/icon.png',
      'friendly_name': 'Dimmer Debian Firmware',
      'in_progress': False,
      'installed_version': '16015010',
      'latest_version': '16015010',
      'release_summary': None,
      'release_url': None,
      'skipped_version': None,
      'supported_features': <UpdateEntityFeature: 5>,
      'title': None,
      'update_percentage': None,
    }),
    'context': <ANY>,
    'entity_id': 'update.dimmer_debian_firmware',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[contact_sensor][update.front_door_open_closed_sensor_firmware-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'update',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'update.front_door_open_closed_sensor_firmware',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <UpdateDeviceClass.FIRMWARE: 'firmware'>,
    'original_icon': None,
    'original_name': 'Firmware',
    'platform': 'smartthings',
    'previous_unique_id': None,
    'supported_features': <UpdateEntityFeature: 5>,
    'translation_key': None,
    'unique_id': '2d9a892b-1c93-45a5-84cb-0e81889498c6_main',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[contact_sensor][update.front_door_open_closed_sensor_firmware-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'auto_update': False,
      'device_class': 'firmware',
      'display_precision': 0,
      'entity_picture': 'https://brands.home-assistant.io/_/smartthings/icon.png',
      'friendly_name': '.Front Door Open/Closed Sensor Firmware',
      'in_progress': False,
      'installed_version': '00000103',
      'latest_version': '00000104',
      'release_summary': None,
      'release_url': None,
      'skipped_version': None,
      'supported_features': <UpdateEntityFeature: 5>,
      'title': None,
      'update_percentage': None,
    }),
    'context': <ANY>,
    'entity_id': 'update.front_door_open_closed_sensor_firmware',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_all_entities[ikea_kadrilj][update.kitchen_ikea_kadrilj_window_blind_firmware-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'update',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'update.kitchen_ikea_kadrilj_window_blind_firmware',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <UpdateDeviceClass.FIRMWARE: 'firmware'>,
    'original_icon': None,
    'original_name': 'Firmware',
    'platform': 'smartthings',
    'previous_unique_id': None,
    'supported_features': <UpdateEntityFeature: 5>,
    'translation_key': None,
    'unique_id': '71afed1c-006d-4e48-b16e-e7f88f9fd638_main',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[ikea_kadrilj][update.kitchen_ikea_kadrilj_window_blind_firmware-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'auto_update': False,
      'device_class': 'firmware',
      'display_precision': 0,
      'entity_picture': 'https://brands.home-assistant.io/_/smartthings/icon.png',
      'friendly_name': 'Kitchen IKEA KADRILJ Window blind Firmware',
      'in_progress': False,
      'installed_version': '22007631',
      'latest_version': '22007631',
      'release_summary': None,
      'release_url': None,
      'skipped_version': None,
      'supported_features': <UpdateEntityFeature: 5>,
      'title': None,
      'update_percentage': None,
    }),
    'context': <ANY>,
    'entity_id': 'update.kitchen_ikea_kadrilj_window_blind_firmware',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[multipurpose_sensor][update.deck_door_firmware-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'update',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'update.deck_door_firmware',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <UpdateDeviceClass.FIRMWARE: 'firmware'>,
    'original_icon': None,
    'original_name': 'Firmware',
    'platform': 'smartthings',
    'previous_unique_id': None,
    'supported_features': <UpdateEntityFeature: 5>,
    'translation_key': None,
    'unique_id': '7d246592-93db-4d72-a10d-5a51793ece8c_main',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[multipurpose_sensor][update.deck_door_firmware-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'auto_update': False,
      'device_class': 'firmware',
      'display_precision': 0,
      'entity_picture': 'https://brands.home-assistant.io/_/smartthings/icon.png',
      'friendly_name': 'Deck Door Firmware',
      'in_progress': False,
      'installed_version': '0000001B',
      'latest_version': '0000001B',
      'release_summary': None,
      'release_url': None,
      'skipped_version': None,
      'supported_features': <UpdateEntityFeature: 5>,
      'title': None,
      'update_percentage': None,
    }),
    'context': <ANY>,
    'entity_id': 'update.deck_door_firmware',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[smart_plug][update.arlo_beta_basestation_firmware-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'update',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'update.arlo_beta_basestation_firmware',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <UpdateDeviceClass.FIRMWARE: 'firmware'>,
    'original_icon': None,
    'original_name': 'Firmware',
    'platform': 'smartthings',
    'previous_unique_id': None,
    'supported_features': <UpdateEntityFeature: 5>,
    'translation_key': None,
    'unique_id': '550a1c72-65a0-4d55-b97b-75168e055398_main',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[smart_plug][update.arlo_beta_basestation_firmware-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'auto_update': False,
      'device_class': 'firmware',
      'display_precision': 0,
      'entity_picture': 'https://brands.home-assistant.io/_/smartthings/icon.png',
      'friendly_name': 'Arlo Beta Basestation Firmware',
      'in_progress': False,
      'installed_version': '00102101',
      'latest_version': '00102101',
      'release_summary': None,
      'release_url': None,
      'skipped_version': None,
      'supported_features': <UpdateEntityFeature: 5>,
      'title': None,
      'update_percentage': None,
    }),
    'context': <ANY>,
    'entity_id': 'update.arlo_beta_basestation_firmware',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[yale_push_button_deadbolt_lock][update.basement_door_lock_firmware-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'update',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'update.basement_door_lock_firmware',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <UpdateDeviceClass.FIRMWARE: 'firmware'>,
    'original_icon': None,
    'original_name': 'Firmware',
    'platform': 'smartthings',
    'previous_unique_id': None,
    'supported_features': <UpdateEntityFeature: 5>,
    'translation_key': None,
    'unique_id': 'a9f587c5-5d8b-4273-8907-e7f609af5158_main',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[yale_push_button_deadbolt_lock][update.basement_door_lock_firmware-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'auto_update': False,
      'device_class': 'firmware',
      'display_precision': 0,
      'entity_picture': 'https://brands.home-assistant.io/_/smartthings/icon.png',
      'friendly_name': 'Basement Door Lock Firmware',
      'in_progress': False,
      'installed_version': '00840847',
      'latest_version': '00840847',
      'release_summary': None,
      'release_url': None,
      'skipped_version': None,
      'supported_features': <UpdateEntityFeature: 5>,
      'title': None,
      'update_percentage': None,
    }),
    'context': <ANY>,
    'entity_id': 'update.basement_door_lock_firmware',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
